<resources>
    <string name="app_name">Vinotecapp</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
    <string name="pwd">Contraseña</string>
    <string name="email">Email</string>
    <string name="reg">REGISTRARSE</string>
    <string name="reg_pregunta">Registrarse</string>
    <string name="log">INICIAR SESIÓN</string>
    <string name="reg_titulo">¡Regístrate!</string>
    <string name="cuenta_pregunta">¿Ya tienes una cuenta?</string>
    <string name="cuenta_pregunta_log">¿No tienes una cuenta?</string>
    <string name="iniciar_ses_pregunta">Iniciar Sesión</string>
    <string name="bienvenido">Bienvenido, </string>
    <string name="log_titulo">¡Inicia sesión!</string>
    <string name="pti">Inicio</string>
    <string name="buscador">Buscador</string>
    <string name="comprar">Comprar</string>
    <string name="cuenta">Cuenta</string>
    <string name="cerrarSesion">Sesión cerrada correctamente.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvido">Bienvido de nuevo,</string>
    <string name="inicio">Inicio</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="twitch">Twitch</string>
    <string name="TikTok">TikTok</string>
    <string name="YT">YouTube</string>
    <string name="Insta">Instagram</string>
    <string name="LI">Linkedin</string>
</resources>